Fixes dark mode not working on phones

--- a/src/static/css/layout/_main.scss
+++ b/src/static/css/layout/_main.scss
@@ -16,7 +16,7 @@
 		margin: auto;
   		padding: 2vw;
 		text-align: center;
-		height: 100vh;
+		
 	}
 
 	.titlefadein{
@@ -43,6 +43,7 @@
     		text-align: center;
 			font-size: 1.2em;
 			justify-content: center;
+			
 		}
 		.maintext{
 			max-width: 33em;
@@ -57,6 +58,15 @@
 		.aboutmain{
 			margin-left: 6em;
 		
+		}
+	}
+
+	@media  screen and (min-height: 850px) {
+		.mainpage{
+			 height: 120vh;
+		}
+		#wrapperextra{
+			height: 160vh;
 		}
 	}
 
