--- a/src/static/css/layout/_wrapper.scss
+++ b/src/static/css/layout/_wrapper.scss
@@ -47,7 +47,7 @@
 		opacity: 1;
 		padding: (_size(section-spacing) * 1.5);
 		width: 90em;
-		height: 100vh;
+		
 
 		body.is-menu-visible & {
 			opacity: 0.15;
